[tool.poetry]
name = "named-entity-recognition"
version = "0.1.0"
description = "An app designed to extract entities from input sentence."
authors = ["Kabeer Akande <46060542+kbakande@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["sentencepiece"], version = "^4.36.2"}
datasets = "^2.16.1"
evaluate = "^0.4.1"
gradio = "^4.12.0"
sentencepiece = "^0.1.99"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
